Starting to fix algorithm driving the resolution of the composite associated with a node. Before it was trying to resolve it with all contributions, causing exceptions when multiple contributions were used and the composite could not be fully resolved in one of them.
git-svn-id: https://svn.apache.org/repos/asf/tuscany/java/sca@676652 13f79535-47bb-0310-9956-ffa450edef68